--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
+    <style>
+        /* Basic styling for the button */
+        .learn-more-button {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 16px;
+            color: #fff;
+            background-color: #007BFF;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .learn-more-button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My GitHub Pages Site!</h1>
+    <h1>Trading Resources!</h1>
     <p>This is a placeholder page.</p>
+
+    <!-- Learn More Button -->
+    <a href="https://www.investopedia.com/terms/o/option.asp" class="learn-more-button" target="_blank">
+        Learn More About Options Trading
+    </a>
 </body>
 </html>
