--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     </style>
 </head>
 <body>
-    <h1>Trading Resources!</h1>
+    <h1>Welcome to My GitHub Pages Site!</h1>
     <p>This is a placeholder page.</p>
 
     <!-- Learn More Button -->
-    <a href="https://www.investopedia.com/terms/o/option.asp" class="learn-more-button" target="_blank">
+    <a href="options-trading.html" class="learn-more-button">
         Learn More About Options Trading
     </a>
 </body>
